--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "chart.js": "^4.2.1",
+    "dateformat": "^5.0.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-bootstrap": "^0.26.2",
